--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-
+    box-sizing: border-box;
+}
+body::-webkit-scrollbar {
+    display: none;
+    
 }
 .container {
     display: flex;
@@ -71,3 +75,101 @@
         transform: rotateZ(360deg);
     }
 }
+
+
+/* rotating images */
+
+
+.outerbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #000;
+
+}
+
+.box {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    transform-style: preserve-3d;
+    animation: imgspinning 20s linear infinite;
+}
+@keyframes imgspinning {
+    0% {
+        transform: perspective(1000px) rotateX(0deg) ;
+    }
+    100% {
+        transform: perspective(1000px) rotateX(360deg);
+    }
+    
+}
+.box span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateX(calc(var(--i) * 45deg)) translateZ(300px);
+}
+
+.box span img {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 110%;
+    height: 110%;
+    object-fit: contain;
+
+}
+
+/* neon text */
+.neontext {
+    
+    font-family: arial;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #07252d;
+
+}
+
+
+.neontext h2 {
+    position: relative;
+    font-size: 6em;
+    /* font-weight: 40px; */
+    letter-spacing: 15px;
+
+    color: #0e3742;
+    /* text-transform: uppercase; */
+    width: 100%;
+    text-align: center;
+    -webkit-box-reflect: below 2px linear-gradient(transparent, #0008);
+    line-height: 0.70em;
+    outline: none;
+    animation: lightup 5s linear infinite;
+}
+
+
+
+@keyframes lightup {
+    0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92% {
+        color: #0e3742;
+        text-shadow: none;
+    }
+    18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 90%, 92.1%, 100% {
+        color: #fff;
+        text-shadow: 
+        0 0 10px #03bcf4,
+        0 0 20px #03bcf4,
+        0 0 40px #03bcf4,
+        0 0 80px #03bcf4,
+        0 0 160px #03bcf4;
+    }
+}
+
